--- a/main.ipynb
+++ b/main.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "(array([[ True, False,  True, False],\n        [False, False,  True,  True],\n        [ True,  True, False, False]]),\n array([ True, False,  True]))"
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,12 +108,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# gcov 연동"
+    "# SBFL engine - gcov 연동"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>t1</th>\n      <th>t3</th>\n      <th>t6</th>\n      <th>t7</th>\n      <th>t9</th>\n      <th>t15</th>\n      <th>t16</th>\n      <th>t17</th>\n      <th>t19</th>\n      <th>t20</th>\n      <th>...</th>\n      <th>t22</th>\n      <th>t24</th>\n      <th>t30</th>\n      <th>t35</th>\n      <th>t37</th>\n      <th>t38</th>\n      <th>t39</th>\n      <th>t40</th>\n      <th>t41</th>\n      <th>t42</th>\n    </tr>\n    <tr>\n      <th>source</th>\n      <th>line</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"11\" valign=\"top\">flex.c</th>\n      <th>122</th>\n      <td>6</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4</td>\n      <td>6</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>...</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>130</th>\n      <td>6</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4</td>\n      <td>6</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>...</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>6</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4</td>\n      <td>6</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>...</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>132</th>\n      <td>6</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4</td>\n      <td>6</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>...</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>137</th>\n      <td>6</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4</td>\n      <td>6</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>...</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>12412</th>\n      <td>59</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>56</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>12416</th>\n      <td>59</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>56</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>12419</th>\n      <td>8</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>...</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>12422</th>\n      <td>8</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>...</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>12423</th>\n      <td>8</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>...</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n  </tbody>\n</table>\n<p>2730 rows × 21 columns</p>\n</div>",
       "text/plain": "              t1  t3  t6  t7  t9  t15  t16  t17  t19  t20  ...  t22  t24  t30  \\\nsource line                                                ...                  \nflex.c 122     6   1   2   1   1    4    6    2    3    2  ...    1    1    1   \n       130     6   1   2   1   1    4    6    2    3    2  ...    1    1    1   \n       131     6   1   2   1   1    4    6    2    3    2  ...    1    1    1   \n       132     6   1   2   1   1    4    6    2    3    2  ...    1    1    1   \n       137     6   1   2   1   1    4    6    2    3    2  ...    1    1    1   \n...           ..  ..  ..  ..  ..  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n       12412  59   0   0   0  56    0    0    0    0    0  ...    0    0    0   \n       12416  59   0   0   0  56    0    0    0    0    0  ...    0    0    0   \n       12419   8   2   2   2   2    4    2    2    2    2  ...    2    2    2   \n       12422   8   2   2   2   2    4    2    2    2    2  ...    2    2    2   \n       12423   8   2   2   2   2    4    2    2    2    2  ...    2    2    2   \n\n              t35  t37  t38  t39  t40  t41  t42  \nsource line                                      \nflex.c 122      2    1    1    1    3    1    1  \n       130      2    1    1    1    3    1    1  \n       131      2    1    1    1    3    1    1  \n       132      2    1    1    1    3    1    1  \n       137      2    1    1    1    3    1    1  \n...           ...  ...  ...  ...  ...  ...  ...  \n       12412    2    0    0    0    0    0    0  \n       12416    2    0    0    0    0    0    0  \n       12419    2    2    2    2    2    2    2  \n       12422    2    2    2    2    2    2    2  \n       12423    2    2    2    2    2    2    2  \n\n[2730 rows x 21 columns]"
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,8 +129,9 @@
    "source": [
     "from sbfl.utils import gcov_files_to_frame, get_sbfl_scores_from_frame\n",
     "\n",
+    "# 각 테스트 케이스의 소스 커버리지 정보\n",
     "coverage_files = {\n",
-    "    't1': ['sample/f1_f5/t1.gcov'],\n",
+    "    't1': ['sample/f1_f5/t1.gcov'], \n",
     "    't3': ['sample/f1_f5/t3.gcov'],\n",
     "    't6': ['sample/f1_f5/t6.gcov'],\n",
     "    't7': ['sample/f1_f5/t7.gcov'],\n",
@@ -159,15 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>score</th>\n    </tr>\n    <tr>\n      <th>source</th>\n      <th>line</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"11\" valign=\"top\">flex.c</th>\n      <th>7229</th>\n      <td>0.866025</td>\n    </tr>\n    <tr>\n      <th>3153</th>\n      <td>0.866025</td>\n    </tr>\n    <tr>\n      <th>7262</th>\n      <td>0.866025</td>\n    </tr>\n    <tr>\n      <th>3147</th>\n      <td>0.866025</td>\n    </tr>\n    <tr>\n      <th>915</th>\n      <td>0.866025</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>9113</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>9114</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>9117</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>9129</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>4043</th>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n<p>2730 rows × 1 columns</p>\n</div>",
-      "text/plain": "                score\nsource line          \nflex.c 7229  0.866025\n       3153  0.866025\n       7262  0.866025\n       3147  0.866025\n       915   0.866025\n...               ...\n       9113  0.000000\n       9114  0.000000\n       9117  0.000000\n       9129  0.000000\n       4043  0.000000\n\n[2730 rows x 1 columns]"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>score</th>\n    </tr>\n    <tr>\n      <th>source</th>\n      <th>line</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"11\" valign=\"top\">flex.c</th>\n      <th>122</th>\n      <td>0.436436</td>\n    </tr>\n    <tr>\n      <th>130</th>\n      <td>0.436436</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>0.436436</td>\n    </tr>\n    <tr>\n      <th>132</th>\n      <td>0.436436</td>\n    </tr>\n    <tr>\n      <th>137</th>\n      <td>0.436436</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>12412</th>\n      <td>0.250000</td>\n    </tr>\n    <tr>\n      <th>12416</th>\n      <td>0.250000</td>\n    </tr>\n    <tr>\n      <th>12419</th>\n      <td>0.436436</td>\n    </tr>\n    <tr>\n      <th>12422</th>\n      <td>0.436436</td>\n    </tr>\n    <tr>\n      <th>12423</th>\n      <td>0.436436</td>\n    </tr>\n  </tbody>\n</table>\n<p>2730 rows × 1 columns</p>\n</div>",
+      "text/plain": "                 score\nsource line           \nflex.c 122    0.436436\n       130    0.436436\n       131    0.436436\n       132    0.436436\n       137    0.436436\n...                ...\n       12412  0.250000\n       12416  0.250000\n       12419  0.436436\n       12422  0.436436\n       12423  0.436436\n\n[2730 rows x 1 columns]"
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,9 +178,40 @@
     "    't1', 't3', 't6', 't7', 't9', 't15', 't17', 't20', 't21',\n",
     "    't22', 't24', 't30', 't37', 't38', 't40', 't41', 't42'\n",
     "]\n",
-    "score_df = get_sbfl_scores_from_frame(cov_df, failing_tests)\n",
+    "\n",
+    "# coverage 정보 (cov_df) + failing tests 정보를 가지고 sbfl score를 계산\n",
+    "score_df = get_sbfl_scores_from_frame(\n",
+    "    cov_df, failing_tests, sbfl=SBFL(formula='Ochiai'))\n",
+    "\n",
+    "score_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>score</th>\n    </tr>\n    <tr>\n      <th>source</th>\n      <th>line</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"11\" valign=\"top\">flex.c</th>\n      <th>7229</th>\n      <td>0.866025</td>\n    </tr>\n    <tr>\n      <th>3153</th>\n      <td>0.866025</td>\n    </tr>\n    <tr>\n      <th>7262</th>\n      <td>0.866025</td>\n    </tr>\n    <tr>\n      <th>3147</th>\n      <td>0.866025</td>\n    </tr>\n    <tr>\n      <th>915</th>\n      <td>0.866025</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>9113</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>9114</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>9117</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>9129</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>4043</th>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n<p>2730 rows × 1 columns</p>\n</div>",
+      "text/plain": "                score\nsource line          \nflex.c 7229  0.866025\n       3153  0.866025\n       7262  0.866025\n       3147  0.866025\n       915   0.866025\n...               ...\n       9113  0.000000\n       9114  0.000000\n       9117  0.000000\n       9129  0.000000\n       4043  0.000000\n\n[2730 rows x 1 columns]"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# score 높은 순으로 정렬\n",
     "score_df.sort_values(by='score', ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
