--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -38,7 +38,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 4
     }
    ],
    "metadata": {}
@@ -379,8 +379,7 @@
    "execution_count": 12,
    "source": [
     "failing_tests = [\n",
-    "    't1', 't3', 't6', 't7', 't9', 't15', 't17', 't20', 't21',\n",
-    "    't22', 't24', 't30', 't37', 't38', 't40', 't41', 't42'\n",
+    "    '51', '52' # unknown\n",
     "]\n",
     "\n",
     "# coverage 정보 (cov_df) + failing tests 정보를 가지고 sbfl score를 계산\n",
@@ -394,21 +393,21 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                 score\n",
-       "source line           \n",
-       "flex.c 122    0.436436\n",
-       "       130    0.436436\n",
-       "       131    0.436436\n",
-       "       132    0.436436\n",
-       "       137    0.436436\n",
-       "...                ...\n",
-       "       12412  0.250000\n",
-       "       12416  0.250000\n",
-       "       12419  0.436436\n",
-       "       12422  0.436436\n",
-       "       12423  0.436436\n",
+       "                  score\n",
+       "source      line       \n",
+       "threading.c 132     1.0\n",
+       "            135     1.0\n",
+       "            138     1.0\n",
+       "            142     1.0\n",
+       "            145     1.0\n",
+       "...                 ...\n",
+       "grammar.y   1258    1.0\n",
+       "            1260    1.0\n",
+       "            1479    1.0\n",
+       "            1482    1.0\n",
+       "            1516    1.0\n",
        "\n",
-       "[2730 rows x 1 columns]"
+       "[1305 rows x 1 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -440,53 +439,55 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"11\" valign=\"top\">flex.c</th>\n",
-       "      <th>122</th>\n",
-       "      <td>0.436436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>0.436436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>0.436436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">threading.c</th>\n",
        "      <th>132</th>\n",
-       "      <td>0.436436</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>0.436436</td>\n",
+       "      <th>135</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12412</th>\n",
-       "      <td>0.250000</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">grammar.y</th>\n",
+       "      <th>1258</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12416</th>\n",
-       "      <td>0.250000</td>\n",
+       "      <th>1260</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12419</th>\n",
-       "      <td>0.436436</td>\n",
+       "      <th>1479</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12422</th>\n",
-       "      <td>0.436436</td>\n",
+       "      <th>1482</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12423</th>\n",
-       "      <td>0.436436</td>\n",
+       "      <th>1516</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2730 rows × 1 columns</p>\n",
+       "<p>1305 rows × 1 columns</p>\n",
        "</div>"
       ]
      },
@@ -508,21 +509,21 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                score\n",
-       "source line          \n",
-       "flex.c 7229  0.866025\n",
-       "       3153  0.866025\n",
-       "       7262  0.866025\n",
-       "       3147  0.866025\n",
-       "       915   0.866025\n",
-       "...               ...\n",
-       "       9113  0.000000\n",
-       "       9114  0.000000\n",
-       "       9117  0.000000\n",
-       "       9129  0.000000\n",
-       "       4043  0.000000\n",
+       "                    score\n",
+       "source        line       \n",
+       "threading.c   132     1.0\n",
+       "re_lexer.c    1860    1.0\n",
+       "              1710    1.0\n",
+       "              1713    1.0\n",
+       "              1714    1.0\n",
+       "...                   ...\n",
+       "ahocorasick.c 790     0.0\n",
+       "              789     0.0\n",
+       "              788     0.0\n",
+       "              787     0.0\n",
+       "re_grammar.c  1982    0.0\n",
        "\n",
-       "[2730 rows x 1 columns]"
+       "[1305 rows x 1 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -554,53 +555,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"11\" valign=\"top\">flex.c</th>\n",
-       "      <th>7229</th>\n",
-       "      <td>0.866025</td>\n",
+       "      <th>threading.c</th>\n",
+       "      <th>132</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3153</th>\n",
-       "      <td>0.866025</td>\n",
+       "      <th rowspan=\"4\" valign=\"top\">re_lexer.c</th>\n",
+       "      <th>1860</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7262</th>\n",
-       "      <td>0.866025</td>\n",
+       "      <th>1710</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3147</th>\n",
-       "      <td>0.866025</td>\n",
+       "      <th>1713</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>915</th>\n",
-       "      <td>0.866025</td>\n",
+       "      <th>1714</th>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9113</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <th rowspan=\"4\" valign=\"top\">ahocorasick.c</th>\n",
+       "      <th>790</th>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9114</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>789</th>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9117</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>788</th>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9129</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>787</th>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4043</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>re_grammar.c</th>\n",
+       "      <th>1982</th>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2730 rows × 1 columns</p>\n",
+       "<p>1305 rows × 1 columns</p>\n",
        "</div>"
       ]
      },
