Update utils.py and main.ipynb (usage example)

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,623 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sbfl.base import SBFL\n",
+    "from scipy.stats import rankdata\n",
     "\n",
     "# TODO: add functionality to convert gcov result files to X, y\n",
     "# TODO: add functionality to convert Cobertura result files to X, y\n",
     "\n",
-    "#   e1,e2,e3,e4\n",
+    "#   e1,e2,e3,e4,e5,e6\n",
     "X = np.array([\n",
-    "    [1,0,1,0], # coverage of test t0\n",
-    "    [0,0,1,1], # coverage of test t1\n",
-    "    [1,1,0,0]  # coverage of test t2\n",
+    "    [1,1,0,0,1,1], # coverage of test t0\n",
+    "    [1,1,0,0,1,1], # coverage of test t1\n",
+    "    [0,1,1,0,1,0], # coverage of test t2\n",
+    "    [1,0,0,1,0,0],\n",
+    "    [0,1,0,1,1,0],\n",
     "], dtype=bool)\n",
     "\n",
-    "y = np.array([\n",
-    "    1, # t0: PASS\n",
-    "    0, # t1: FAIL\n",
-    "    1  # t2: PASS\n",
-    "], dtype=bool)\n",
+    "y = np.array([1,1,0,0,0], dtype=bool)\n",
     "\n",
     "X, y"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(array([[ True, False,  True, False],\n",
-       "        [False, False,  True,  True],\n",
-       "        [ True,  True, False, False]]),\n",
-       " array([ True, False,  True]))"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
-    "# Calculate the suspiciousness scores\n",
+    "is_passing = y == 1\n",
+    "\n",
     "sbfl = SBFL(formula='Ochiai')\n",
-    "sbfl.fit(X, y)\n",
-    "print(sbfl.scores_)"
+    "for t in np.where(y == 0)[0]:\n",
+    "    print(\"failing\", t)\n",
+    "    used = is_passing.copy()\n",
+    "    used[t] = 1\n",
+    "\n",
+    "    # Calculate the suspiciousness scores\n",
+    "    sbfl.fit(X[used], y[used])\n",
+    "    print(sbfl.scores_)\n",
+    "    print(rankdata(-sbfl.scores_, method='ordinal'))"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0.         0.         0.70710678 1.        ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "names = ['file', 'method']\n",
     "elements = [\n",
     "    ('file1.py', 'method1'),\n",
     "    ('file2.py', 'method2'),\n",
     "    ('file2.py', 'method3'),\n",
-    "    ('file2.py', 'method4')\n",
+    "    ('file2.py', 'method4'),\n",
+    "    ('file2.py', 'method5'),\n",
+    "    ('file2.py', 'method6'),\n",
     "]\n",
     "df = sbfl.to_frame(elements=elements, names=names)\n",
     "df"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                     score\n",
-       "file     method           \n",
-       "file1.py method1  0.000000\n",
-       "file2.py method2  0.000000\n",
-       "         method3  0.707107\n",
-       "         method4  1.000000"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>file</th>\n",
-       "      <th>method</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>file1.py</th>\n",
-       "      <th>method1</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">file2.py</th>\n",
-       "      <th>method2</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>method3</th>\n",
-       "      <td>0.707107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>method4</th>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "source": [
-    "df.max(level='file')"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "          score\n",
-       "file           \n",
-       "file1.py    0.0\n",
-       "file2.py    1.0"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>file</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>file1.py</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>file2.py</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# SBFL engine - gcov 연동"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "source": [
-    "from sbfl.utils import gcov_files_to_frame, get_sbfl_scores_from_frame\n",
-    "\n",
-    "coverage_dirs = {\n",
-    "    '51': \"sample/yara-buggy#1/yara-buggy#1-51\",\n",
-    "    '52': \"sample/yara-buggy#1/yara-buggy#1-52\",\n",
-    "    '53': \"sample/yara-buggy#1/yara-buggy#1-53\",\n",
-    "}\n",
-    "\n",
-    "coverage_files = {\n",
-    "    test: [\n",
-    "        os.path.join(coverage_dirs[test], fn)\n",
-    "        for fn in os.listdir(coverage_dirs[test]) if fn.endswith('gcov')\n",
-    "    ]\n",
-    "    for test in coverage_dirs\n",
-    "}\n",
-    "\n",
-    "cov_df = gcov_files_to_frame(coverage_files, only_covered=True)\n",
-    "cov_df"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                  51  52  53\n",
-       "source      line            \n",
-       "threading.c 132    0   0   4\n",
-       "            135    0   0   4\n",
-       "            138    0   0   4\n",
-       "            142    0   0   4\n",
-       "            145    0   0   4\n",
-       "...               ..  ..  ..\n",
-       "grammar.y   1258   0   0   4\n",
-       "            1260   0   0   4\n",
-       "            1479   0   0   4\n",
-       "            1482   0   0   4\n",
-       "            1516   0   0   4\n",
-       "\n",
-       "[1305 rows x 3 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>51</th>\n",
-       "      <th>52</th>\n",
-       "      <th>53</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source</th>\n",
-       "      <th>line</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">threading.c</th>\n",
-       "      <th>132</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">grammar.y</th>\n",
-       "      <th>1258</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1260</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1479</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1482</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1516</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1305 rows × 3 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "source": [
-    "failing_tests = [\n",
-    "    '51', '52' # unknown\n",
-    "]\n",
-    "\n",
-    "# coverage 정보 (cov_df) + failing tests 정보를 가지고 sbfl score를 계산\n",
-    "score_df = get_sbfl_scores_from_frame(\n",
-    "    cov_df, failing_tests, sbfl=SBFL(formula='Ochiai'))\n",
-    "\n",
-    "score_df"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                  score\n",
-       "source      line       \n",
-       "threading.c 132     1.0\n",
-       "            135     1.0\n",
-       "            138     1.0\n",
-       "            142     1.0\n",
-       "            145     1.0\n",
-       "...                 ...\n",
-       "grammar.y   1258    1.0\n",
-       "            1260    1.0\n",
-       "            1479    1.0\n",
-       "            1482    1.0\n",
-       "            1516    1.0\n",
-       "\n",
-       "[1305 rows x 1 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source</th>\n",
-       "      <th>line</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">threading.c</th>\n",
-       "      <th>132</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">grammar.y</th>\n",
-       "      <th>1258</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1260</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1479</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1482</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1516</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1305 rows × 1 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 12
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "source": [
-    "# score 높은 순으로 정렬\n",
-    "score_df.sort_values(by='score', ascending=False)"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                    score\n",
-       "source        line       \n",
-       "threading.c   132     1.0\n",
-       "re_lexer.c    1860    1.0\n",
-       "              1710    1.0\n",
-       "              1713    1.0\n",
-       "              1714    1.0\n",
-       "...                   ...\n",
-       "ahocorasick.c 790     0.0\n",
-       "              789     0.0\n",
-       "              788     0.0\n",
-       "              787     0.0\n",
-       "re_grammar.c  1982    0.0\n",
-       "\n",
-       "[1305 rows x 1 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>source</th>\n",
-       "      <th>line</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>threading.c</th>\n",
-       "      <th>132</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">re_lexer.c</th>\n",
-       "      <th>1860</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1710</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1713</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1714</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">ahocorasick.c</th>\n",
-       "      <th>790</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>789</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>788</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>787</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>re_grammar.c</th>\n",
-       "      <th>1982</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1305 rows × 1 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 13
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "df.max(level='file')"
+   ],
    "outputs": [],
    "metadata": {}
   }
